--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Ivan Oberemok</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap">
+    <link rel="icon" href="assets/hand.ico">
 </head>
 <body class="font-['Poppins',sans-serif] flex flex-col gap-5">
 
@@ -49,7 +50,7 @@
             <h1 class="text-5xl font-bold">Ivan Oberemok</h1>
             <p class="text-2xl font-semibold text-gray-500 mt-4 whitespace-nowrap">Ethereum Smart Contract Developer</p>
             <div class="flex justify-center gap-4 mt-6">
-                <button class="font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 hover:bg-gray-800 hover:text-white" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+                <button class="font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 hover:bg-gray-800 hover:text-white" onclick="window.open('./assets/resume.pdf')">Download CV</button>
                 <button class="font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 bg-gray-800 text-white hover:bg-black" onclick="location.href='#contact'">Contact Info</button>
             </div>
             <div class="flex justify-center gap-4 mt-4">
