--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </div>
         <div class="grid grid-cols-1 max-w-[830px] mx-auto gap-5">
             <div class="flex flex-col items-center gap-5 sm:border-2 sm:border-gray-300 sm:rounded-3xl sm:p-5">
-                <h2 class="flex flex-col sm:flex-row text-2xl font-semibold items-center justify-center gap-2 bg-gray-200 sm:bg-transparent w-full p-5">
+                <h2 class="flex flex-col sm:flex-row text-2xl font-semibold items-center justify-center gap-2 bg-gray-200 sm:bg-transparent w-full">
                     <a href="https://www.venly.io/" target="_blank" class="flex gap-2">
                         <img src="./assets/venly-logo.png" alt="Venly logo" class="w-8 h-8 rounded-lg">
                         <div>Venly.io</div>
@@ -274,7 +274,7 @@
                     <div class="hidden sm:block"> | </div>
                     <div class="whitespace-nowrap">Mar 2023 - Dec 2023</div>
                 </h2>
-                <p class="text-center text-lg px-5"><strong>Role: </strong>Backend Developer focused on building and optimizing scalable backend systems for blockchain applications.</p>
+                <p class="text-center text-lg"><strong>Role: </strong>Backend Developer focused on building and optimizing scalable backend systems for blockchain applications.</p>
                 <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full px-5">
                     <li class="flex items-start gap-2">
                         <img src="./assets/checkmark.png" alt="Check icon" class="w-6 h-6 mt-1" />
@@ -329,8 +329,8 @@
                     <strong>Technologies used:</strong> Java 17, Spring, PostgreSQL, TypeScript, REST API, JPA, JCE, bitcoinj/bitcoinj, hyperledger/web3j, hashgraph/hedera-sdk-java, GitHub Actions
                 </div>
             </div>
-            <div class="flex flex-col items-center gap-5 sm:border-2 sm:border-gray-300 rounded-3xl">
-                <h2 class="flex flex-col sm:flex-row text-2xl font-semibold items-center gap-2 bg-gray-200 sm:bg-transparent justify-center w-full p-5">
+            <div class="flex flex-col items-center gap-5 sm:border-2 sm:border-gray-300 sm:p-5 rounded-3xl">
+                <h2 class="flex flex-col sm:flex-row text-2xl font-semibold items-center gap-2 bg-gray-200 sm:bg-transparent justify-center w-full">
                     <a href="https://www.globallogic.com" target="_blank" class="flex gap-2">
                         <img src="./assets/gl-logo.png" alt="GL logo" class="w-8 h-8 rounded-lg">
                         <div class="whitespace-nowrap">
@@ -340,8 +340,8 @@
                     <div class="hidden sm:block"> | </div>
                     <div class="whitespace-nowrap">May 2021 - Jul 2022</div>
                 </h2>
-                <p class="text-center text-lg px-5"><strong>Role: </strong>Software Engineer with a focus on orchestrated architecture</p>
-                <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full px-5">
+                <p class="text-center text-lg"><strong>Role: </strong>Software Engineer with a focus on orchestrated architecture</p>
+                <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full">
                     <li class="flex items-start gap-2">
                         <img src="./assets/checkmark.png" alt="Check icon" class="w-6 h-6 mt-1" />
                         <div class="text-lg">
@@ -383,8 +383,8 @@
                     <strong>Technologies used:</strong> Java 11, Spring, PostgreSQL, Docker, Kubernetes, Helm, Grafana, Prometheus, JPA, REST API, JCE
                 </div>
             </div>
-            <div class="flex flex-col items-center gap-5 sm:border-2 sm:border-gray-300 rounded-3xl">
-                <h2 class="flex flex-col sm:flex-row text-2xl font-semibold items-center justify-center gap-2 bg-gray-200 sm:bg-transparent w-full p-5">
+            <div class="flex flex-col items-center gap-5 sm:border-2 sm:border-gray-300 rounded-3xl sm:p-5">
+                <h2 class="flex flex-col sm:flex-row text-2xl font-semibold items-center justify-center gap-2 bg-gray-200 sm:bg-transparent w-full">
                     <a href="https://www.softserveinc.com" target="_blank" class="flex gap-2">
                         <img src="./assets/softserve-logo.png" alt="S logo" class="w-8 h-8 rounded-lg">
                         <div>
@@ -394,7 +394,7 @@
                     <div class="hidden sm:block"> | </div>
                     <div class="whitespace-nowrap">Dec 2020 - May 2021</div>
                 </h2>
-                <p class="text-center text-lg px-5"><strong>Role: </strong>Junior Software Engineer</p>
+                <p class="text-center text-lg"><strong>Role: </strong>Junior Software Engineer</p>
                 <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full px-5">
                     <li class="flex items-start gap-2">
                         <img src="./assets/checkmark.png" alt="Check icon" class="w-6 h-6 mt-1" />
@@ -534,7 +534,7 @@
 
         async function fetchGitHubStats(owner, repo) {
             const headers = {
-                "Authorization": "Bearer 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",
+                "Authorization": "Bearer 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",
                 "Accept": "application/vnd.github.v3+json"
             }
 
