--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <p class="font-semibold text-gray-500">Hello, I'm</p>
             <h1 class="text-5xl font-bold">Ivan Oberemok</h1>
             <p class="text-2xl font-semibold text-gray-500 mt-4">Ethereum Smart Contract Developer</p>
-            <div class="flex justify-center gap-4 mt-6">
-                <button class="font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 hover:bg-gray-800 hover:text-white" onclick="window.open('./assets/resume.pdf')">Download CV</button>
-                <button class="font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 bg-gray-800 text-white hover:bg-black" onclick="location.href='#contact'">Contact Info</button>
+            <div class="flex justify-center gap-4 mt-6 text-sm">
+                <button class="flex items-center justify-center font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 hover:bg-gray-800 hover:text-white whitespace-nowrap" onclick="window.open('./assets/resume.pdf')">Download CV</button>
+                <button class="flex items-center justify-center font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 bg-gray-800 text-white hover:bg-black whitespace-nowrap" onclick="location.href='#contact'">Contact Info</button>
             </div>
             <div class="flex justify-center gap-4 mt-4">
                 <a href="https://www.linkedin.com/in/ivan-oberemok/" target="_blank">
@@ -84,18 +84,18 @@
                           <p>Software Engineer</p>
                         </div>
                     </div>
-                    <div class="flex flex-col items-center gap-3 border-2 border-gray-300 rounded-3xl sm:w-1/2 p-5">
+                    <div class="flex flex-col items-center gap-3 border-2 border-gray-300 rounded-3xl sm:w-1/2 p-3">
                         <img src="./assets/education.png" alt="Education icon" class="size-8" />
                         <h3 class="font-semibold text-lg">Education</h3>
-                        <div class="flex justify-between w-full items-center">
-                            <a href="https://metana.io/web3-solidity-bootcamp-ethereum-blockchain/" target="_blank" class="w-32">
+                        <div class="flex flex-col gap-3 justify-between w-full items-center">
+                            <a href="https://metana.io/web3-solidity-bootcamp-ethereum-blockchain/" target="_blank" class="w-3/4">
                                 <img src="./assets/metana-logo.png" alt="Metana logo" class=""/>
                             </a>
-                            <h4 class="text-gray-500 text-center w-1/2">Web3 Solidity Bootcamp</h4>
+                            <h4 class="text-gray-500 text-center">Web3 Solidity Bootcamp</h4>
                         </div>
                     </div>
                 </div>
-                <div class="text-center text-lg md:text-left">
+                <div class="text-left text-lg md:text-left">
                     <p>
                       Starting as a Java developer 4 years ago, my journey in software development has been rapid and filled with
                       various technologies. I have worked with both backend and frontend stacks, as well as handled DevOps tools
@@ -131,7 +131,7 @@
                         <img src="./assets/contract.png" alt="Smart contract icon" class="size-10" />
                         <h3 class="font-semibold text-2xl text-center">Smart Contracts</h3>
                     </div>
-                    <ul class="grid w-full justify-center grid-cols-2 place-items-center gap-5 p-5" >
+                    <ul class="grid w-full justify-center grid-cols-2 place-items-baseline gap-5 p-5" >
                         <li class="flex gap-1 items-center">
                             <img src="./assets/solidity-logo.svg" alt="Solidity icon" class="size-10" />
                             <h3 class="font-semibold text-lg ">Solidity</h3>
@@ -191,7 +191,7 @@
                         <img src="./assets/frontend.png" alt="Frontend icon" class="size-10" />
                         <h3 class="font-semibold text-2xl text-center">Frontend</h3>
                     </div>
-                    <ul class="grid w-full justify-center grid-cols-2 sm:grid-cols-1 place-items-center gap-5 p-5" >
+                    <ul class="grid w-full justify-center grid-cols-2 sm:grid-cols-1 place-items-left gap-5 p-5" >
                         <li class="flex gap-1 items-center">
                             <img src="./assets/html.png" alt="Html icon" class="size-10" />
                             <h3 class="font-semibold text-lg ">HTML</h3>
@@ -228,7 +228,7 @@
                     <img src="./assets/other-skills.png" alt="Other skills icon" class="size-10" />
                     <h3 class="font-semibold text-2xl text-center">Other skills</h3>
                 </div>
-                <ul class="grid w-full justify-center grid-cols-2 place-items-center gap-5 p-5">
+                <ul class="grid w-full justify-center grid-cols-2 place-items-left gap-5 p-5">
                     <li class="flex gap-2 items-center">
                         <img src="./assets/java.png" alt="Java icon" class="w-8" />
                         <h3 class="font-semibold text-lg ">Java</h3>
@@ -274,7 +274,7 @@
                     <div class="hidden sm:block"> | </div>
                     <div class="whitespace-nowrap">Mar 2023 - Dec 2023</div>
                 </h2>
-                <p class="text-center text-lg"><strong>Role: </strong>Backend Developer focused on building and optimizing scalable backend systems for blockchain applications.</p>
+                <p class="text-center text-lg px-5"><strong>Role: </strong>Backend Developer focused on building and optimizing scalable backend systems for blockchain applications.</p>
                 <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full px-5">
                     <li class="flex items-start gap-2">
                         <img src="./assets/checkmark.png" alt="Check icon" class="w-6 h-6 mt-1" />
@@ -340,8 +340,8 @@
                     <div class="hidden sm:block"> | </div>
                     <div class="whitespace-nowrap">May 2021 - Jul 2022</div>
                 </h2>
-                <p class="text-center text-lg"><strong>Role: </strong>Software Engineer with a focus on orchestrated architecture</p>
-                <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full">
+                <p class="text-center text-lg px-5"><strong>Role: </strong>Software Engineer with a focus on orchestrated architecture</p>
+                <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full px-5">
                     <li class="flex items-start gap-2">
                         <img src="./assets/checkmark.png" alt="Check icon" class="w-6 h-6 mt-1" />
                         <div class="text-lg">
@@ -505,7 +505,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="flex flex-col items-center justify-center gap-10 min-h-[90vh]">
+    <section id="contact" class="flex flex-col items-center justify-center gap-10 min-h-[80vh]">
         <div class="flex flex-col items-center">
             <p class="text-center font-semibold text-gray-500 whitespace-nowrap">Get In Touch</p>
             <h1 class="text-5xl font-bold text-center whitespace-nowrap">Contact Me</h1>
