--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="text-center">
             <p class="font-semibold text-gray-500">Hello, I'm</p>
             <h1 class="text-5xl font-bold">Ivan Oberemok</h1>
-            <p class="text-2xl font-semibold text-gray-500 mt-4">Ethereum Smart Contract Developer</p>
+            <p class="text-2xl font-semibold text-gray-500 mt-4">Blockchain Developer</p>
             <div class="flex justify-center gap-4 mt-6 text-sm">
                 <button class="flex items-center justify-center font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 hover:bg-gray-800 hover:text-white whitespace-nowrap" onclick="window.open('./assets/resume.pdf')">Download CV</button>
                 <button class="flex items-center justify-center font-semibold transition-all duration-300 p-4 w-32 rounded-full border border-gray-800 bg-gray-800 text-white hover:bg-black whitespace-nowrap" onclick="location.href='#contact'">Contact Info</button>
