--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#about" class="hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300">About</a></li>
             <li><a href="#skills" class="hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300">Skills</a></li>
             <li><a href="#experience" class="hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300">Experience</a></li>
+            <li><a href="#contributions" class="hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300">Contributions</a></li>
             <li><a href="#contact" class="hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300">Contact</a></li>
         </ul>
     </nav>
@@ -35,6 +36,7 @@
                 <li><a href="#about" onclick="toggleMenu()" class="block p-2 hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300 text-center text-2xl">About</a></li>
                 <li><a href="#experience" onclick="toggleMenu()" class="block p-2 hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300 text-center text-2xl">Experience</a></li>
                 <li><a href="#skills" onclick="toggleMenu()" class="block p-2 hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300 text-center text-2xl">Skills</a></li>
+                <li><a href="#contributions" onclick="toggleMenu()" class="block p-2 hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300 text-center text-2xl">Contributions</a></li>
                 <li><a href="#contact" onclick="toggleMenu()" class="block p-2 hover:text-gray-500 hover:underline underline-offset-4 transition-all duration-300 text-center text-2xl">Contact</a></li>
             </ul>
         </div>
@@ -428,8 +430,8 @@
         </div>
     </section> 
     
-    <!-- Projects Section -->
-    <section id="projects" class="flex flex-col gap-5 min-h-[100vh] sm:mx-5">
+    <!-- Contributions Section -->
+    <section id="contributions" class="flex flex-col gap-5 min-h-[100vh] sm:mx-5">
         <div class="flex flex-col sm:gap-0 gap-3 items-center">
             <p class="text-center font-semibold text-gray-500 whitespace-nowrap">GitHub Projects &</p>
             <h1 class="text-5xl font-bold text-center whitespace-nowrap">Contributions</h1>
